[package]
name = "simple-redis"
version = "0.1.0"
edition = "2021"

license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
bytes = "1.10.0"
dashmap = "6.1.0"
enum_dispatch = "0.3.13"
futures = { version = "0.3.31", default-features = false } # cargo add futures --no-default-features
lazy_static = "1.5.0"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros", "net"] } # cargo add tokio --features "rt,rt-multi-thread,macros,net"
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.14", features = ["codec"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
